Update Inference.java for compatibility with Java version < 16